@@ -18,5 +18,18 @@
 */
 
 #define PREF_FLASH_FILE @"FlashFile"
+#define PREF_KEY_A @"KeyA"
+#define PREF_KEY_B @"KeyB"
+#define PREF_KEY_X @"KeyX"
+#define PREF_KEY_Y @"KeyY"
+#define PREF_KEY_L @"KeyL"
+#define PREF_KEY_R @"KeyR"
+#define PREF_KEY_UP  @"KeyUp"
+#define PREF_KEY_DOWN @"KeyDown"
+#define PREF_KEY_LEFT @"KeyLeft"
+#define PREF_KEY_RIGHT @"KeyRight"
+#define PREF_KEY_START @"KeyStart"
+#define PREF_KEY_SELECT @"KeySelect"
+
 
 void setAppDefaults(); //this is defined in preferences.m and should be called at app launch
